[package]
name = "bending_brawler_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_state",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "x11",
    "dynamic_linking",
] }
bevy-inspector-egui = { version = "0.25.1", optional = true }
bevy_rapier2d = "0.27.0"
bevy-tnua = "0.19.0"
bevy-tnua-rapier2d = "0.7.0"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git" }#"0.14.0"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
